--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="kasir" id="kasirPage" style="display:none;">
-    <h2>Kasir Online Lengkap</h2>
+    <h2>Bale Sepatu Mantan</h2>
     <button onclick="logout()">Logout</button>
 
     <div class="input-barang">
