--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
       text-align: center;
     }
     th { background: #2b4d8a; color: white; }
+
+    /* Gaya nota saat print */
+    #nota {
+      display: none;
+      font-size: 14px;
+      text-align: center;
+      margin-top: 20px;
+    }
+    #nota table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    #nota th, #nota td {
+      border: 1px solid #ddd;
+      padding: 5px;
+    }
+    #nota h3 { margin-bottom: 5px; }
   </style>
 </head>
 <body>
@@ -70,6 +87,7 @@
     <select id="daftarBarang"></select>
     <input id="jumlahBeli" placeholder="Jumlah Beli" type="number">
     <button onclick="transaksi()">Proses</button>
+    <button onclick="printNota()">Print Nota</button>
     <ul id="keranjangList"></ul>
     <p id="totalHarga"></p>
 
@@ -77,13 +95,18 @@
     <table id="tabelBarang"></table>
   </div>
 
+  <div id="nota" class="container">
+    <h3><b>Bale Sepatu Mantan</b></h3>
+    <p>Nota Penjualan</p>
+    <table id="notaTable"></table>
+    <p><i>Garansi 1 bulan</i></p>
+  </div>
+
   <script>
-    // === Konfigurasi awal ===
     let user = { username: "kasir", password: "1234" };
     let barangList = JSON.parse(localStorage.getItem("barangList")) || [];
     let keranjang = [];
 
-    // === Auto login saat reload ===
     window.onload = () => {
       if (localStorage.getItem("isLogin") === "true") {
         showKasirPage();
@@ -95,6 +118,7 @@
     function showKasirPage() {
       document.getElementById("loginPage").style.display = "none";
       document.getElementById("kasirPage").style.display = "block";
+      document.getElementById("nota").style.display = "none";
       updateTabelBarang();
       updateDaftarBarang();
     }
@@ -104,7 +128,6 @@
       document.getElementById("kasirPage").style.display = "none";
     }
 
-    // === Login / Logout ===
     function login() {
       let u = document.getElementById("username").value.trim();
       let p = document.getElementById("password").value.trim();
@@ -122,7 +145,6 @@
       showLoginPage();
     }
 
-    // === Tambah Barang ===
     function tambahBarang() {
       let kode = document.getElementById("kodeInput").value.trim();
       let nama = document.getElementById("namaInput").value.trim();
@@ -154,7 +176,6 @@
       document.getElementById("jualInput").value = "";
     }
 
-    // === Tabel Barang ===
     function updateTabelBarang() {
       let tabel = document.getElementById("tabelBarang");
       tabel.innerHTML = `
@@ -188,7 +209,6 @@
       });
     }
 
-    // === Hapus Barang ===
     function hapusBarang(index) {
       if (confirm("Yakin hapus barang ini?")) {
         barangList.splice(index, 1);
@@ -198,7 +218,6 @@
       }
     }
 
-    // === Dropdown Barang ===
     function updateDaftarBarang() {
       let daftar = document.getElementById("daftarBarang");
       daftar.innerHTML = "";
@@ -210,7 +229,6 @@
       });
     }
 
-    // === Transaksi ===
     function transaksi() {
       let index = document.getElementById("daftarBarang").value;
       let jumlah = parseInt(document.getElementById("jumlahBeli").value);
@@ -252,6 +270,36 @@
       });
       document.getElementById("totalHarga").innerText = `Total: Rp${total}`;
     }
+
+    function printNota() {
+      if (keranjang.length === 0) {
+        alert("Belum ada transaksi!");
+        return;
+      }
+
+      let notaDiv = document.getElementById("nota");
+      let table = document.getElementById("notaTable");
+      notaDiv.style.display = "block";
+
+      table.innerHTML = `
+        <tr>
+          <th>Nama Barang</th>
+          <th>Harga Jual</th>
+          <th>Satuan</th>
+        </tr>
+      `;
+
+      keranjang.forEach(k => {
+        let row = table.insertRow();
+        row.insertCell(0).innerText = k.nama;
+        row.insertCell(1).innerText = "Rp" + k.total;
+        row.insertCell(2).innerText = k.jumlah + " pcs";
+      });
+
+      window.print();
+      notaDiv.style.display = "none";
+    }
   </script>
 </body>
 </html>
+
