--- a/index.html
+++ b/index.html
@@ -2,311 +2,17 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bale Sepatu Mantan</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h2, h3 { text-align: center; color: #2b4d8a; }
-    input, select, button {
-      padding: 8px;
-      margin: 5px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      width: 100%;
-    }
-    button {
-      background: #2b4d8a;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover { background: #1d3557; }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: center;
-    }
-    th { background: #2b4d8a; color: white; }
-    #nota, #laporanContainer { display: none; margin-top: 20px; }
-  </style>
+  <title>Login - Bale Sepatu Mantan</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Login -->
-  <div id="loginPage" class="container">
-    <h2>Login Bale Sepatu Mantan</h2>
+  <div class="login-container">
+    <h2>💼 Bale Sepatu Mantan</h2>
     <input id="username" placeholder="Username">
-    <input id="password" placeholder="Password" type="password">
+    <input id="password" type="password" placeholder="Password">
     <button onclick="login()">Login</button>
   </div>
 
-  <!-- Kasir -->
-  <div id="kasirPage" class="container" style="display:none;">
-    <h2>Bale Sepatu Mantan</h2>
-    <button onclick="logout()">Logout</button>
-
-    <h3>Tambah Barang</h3>
-    <input id="kodeInput" placeholder="Kode Barang">
-    <input id="namaInput" placeholder="Nama Barang">
-    <input id="sizeInput" placeholder="Ukuran (contoh: 40, 41, 42)">
-    <input id="stokInput" placeholder="Stok Awal" type="number">
-    <input id="modalInput" placeholder="Harga Modal" type="number">
-    <input id="jualInput" placeholder="Harga Jual" type="number">
-    <button onclick="tambahBarang()">Tambah Barang</button>
-
-    <h3>Transaksi Penjualan</h3>
-    <select id="daftarBarang"></select>
-    <input id="jumlahBeli" placeholder="Jumlah Beli" type="number">
-    <button onclick="transaksi()">Proses</button>
-    <button onclick="printNota()">Print Nota</button>
-    <ul id="keranjangList"></ul>
-    <p id="totalHarga"></p>
-
-    <h3>Data Barang</h3>
-    <table id="tabelBarang"></table>
-
-    <h3>Laporan Penjualan</h3>
-    <select id="laporanFilter">
-      <option value="harian">Harian</option>
-      <option value="mingguan">Mingguan</option>
-      <option value="bulanan">Bulanan</option>
-    </select>
-    <button onclick="tampilkanLaporan()">Tampilkan Laporan</button>
-    <div id="laporanContainer"></div>
-  </div>
-
-  <!-- Nota -->
-  <div id="nota" class="container">
-    <h3><b>Bale Sepatu Mantan</b></h3>
-    <p>Nota Penjualan</p>
-    <table id="notaTable"></table>
-    <p><i>Garansi 1 bulan</i></p>
-  </div>
-
-  <script>
-    // Login sederhana
-    let user = { username: "kasir", password: "1234" };
-    let barangList = JSON.parse(localStorage.getItem("barangList")) || [];
-    let transaksiList = JSON.parse(localStorage.getItem("transaksiList")) || [];
-    let keranjang = [];
-
-    window.onload = () => {
-      if (localStorage.getItem("isLogin") === "true") showKasirPage();
-      else showLoginPage();
-    };
-
-    function showKasirPage() {
-      loginPage.style.display = "none";
-      kasirPage.style.display = "block";
-      nota.style.display = "none";
-      updateTabelBarang();
-      updateDaftarBarang();
-    }
-
-    function showLoginPage() {
-      loginPage.style.display = "block";
-      kasirPage.style.display = "none";
-    }
-
-    function login() {
-      let u = username.value.trim(), p = password.value.trim();
-      if (u === user.username && p === user.password) {
-        localStorage.setItem("isLogin", "true");
-        showKasirPage();
-      } else alert("Username / Password salah!");
-    }
-
-    function logout() {
-      localStorage.setItem("isLogin", "false");
-      showLoginPage();
-    }
-
-    function tambahBarang() {
-      let kode = kodeInput.value.trim();
-      let nama = namaInput.value.trim();
-      let size = sizeInput.value.trim();
-      let stok = parseInt(stokInput.value);
-      let modal = parseInt(modalInput.value);
-      let jual = parseInt(jualInput.value);
-
-      if (!kode || !nama || !size || isNaN(stok) || isNaN(modal) || isNaN(jual)) {
-        alert("Lengkapi semua data!");
-        return;
-      }
-
-      barangList.push({
-        kode, nama, size, stokAwal: stok, hargaModal: modal,
-        hargaJual: jual, stokAkhir: stok, laba: 0
-      });
-
-      localStorage.setItem("barangList", JSON.stringify(barangList));
-      clearInput();
-      updateTabelBarang();
-      updateDaftarBarang();
-    }
-
-    function clearInput() {
-      kodeInput.value = namaInput.value = sizeInput.value = stokInput.value = modalInput.value = jualInput.value = "";
-    }
-
-    function updateTabelBarang() {
-      tabelBarang.innerHTML = `
-        <tr>
-          <th>Kode</th>
-          <th>Nama</th>
-          <th>Ukuran</th>
-          <th>Stok</th>
-          <th>Modal</th>
-          <th>Jual</th>
-          <th>Stok Akhir</th>
-          <th>Laba</th>
-          <th>Aksi</th>
-        </tr>`;
-      barangList.forEach((b, i) => {
-        let row = tabelBarang.insertRow();
-        row.insertCell(0).innerText = b.kode;
-        row.insertCell(1).innerText = b.nama;
-        row.insertCell(2).innerText = b.size;
-        row.insertCell(3).innerText = b.stokAwal;
-        row.insertCell(4).innerText = "Rp" + b.hargaModal;
-        row.insertCell(5).innerText = "Rp" + b.hargaJual;
-        row.insertCell(6).innerText = b.stokAkhir;
-        row.insertCell(7).innerText = "Rp" + b.laba;
-        let aksi = row.insertCell(8);
-        let btn = document.createElement("button");
-        btn.textContent = "Hapus";
-        btn.style.background = "red";
-        btn.onclick = () => hapusBarang(i);
-        aksi.appendChild(btn);
-      });
-    }
-
-    function hapusBarang(index) {
-      if (confirm("Hapus barang ini?")) {
-        barangList.splice(index, 1);
-        localStorage.setItem("barangList", JSON.stringify(barangList));
-        updateTabelBarang();
-        updateDaftarBarang();
-      }
-    }
-
-    function updateDaftarBarang() {
-      daftarBarang.innerHTML = "";
-      barangList.forEach((b, i) => {
-        let opt = document.createElement("option");
-        opt.value = i;
-        opt.text = `${b.nama} (Size ${b.size}) - Stok ${b.stokAkhir}`;
-        daftarBarang.appendChild(opt);
-      });
-    }
-
-    function transaksi() {
-      let index = daftarBarang.value;
-      let jumlah = parseInt(jumlahBeli.value);
-      if (index === "" || isNaN(jumlah) || jumlah <= 0) {
-        alert("Masukkan jumlah valid!");
-        return;
-      }
-
-      let b = barangList[index];
-      if (jumlah > b.stokAkhir) return alert("Stok tidak cukup!");
-
-      b.stokAkhir -= jumlah;
-      let total = b.hargaJual * jumlah;
-      let laba = (b.hargaJual - b.hargaModal) * jumlah;
-      b.laba += laba;
-
-      let transaksiData = {
-        nama: b.nama,
-        size: b.size,
-        jumlah,
-        total,
-        tanggal: new Date().toISOString().split("T")[0]
-      };
-      transaksiList.push(transaksiData);
-      localStorage.setItem("transaksiList", JSON.stringify(transaksiList));
-
-      keranjang.push(transaksiData);
-      localStorage.setItem("barangList", JSON.stringify(barangList));
-
-      updateKeranjang();
-      updateTabelBarang();
-      updateDaftarBarang();
-      jumlahBeli.value = "";
-    }
-
-    function updateKeranjang() {
-      keranjangList.innerHTML = "";
-      let total = 0;
-      keranjang.forEach(k => {
-        let li = document.createElement("li");
-        li.textContent = `${k.nama} (Size ${k.size}) x${k.jumlah} = Rp${k.total}`;
-        keranjangList.appendChild(li);
-        total += k.total;
-      });
-      totalHarga.innerText = `Total: Rp${total}`;
-    }
-
-    function printNota() {
-      if (keranjang.length === 0) return alert("Belum ada transaksi!");
-      nota.style.display = "block";
-      notaTable.innerHTML = `
-        <tr>
-          <th>Nama Barang</th>
-          <th>Size</th>
-          <th>Harga Jual</th>
-          <th>Satuan</th>
-        </tr>`;
-      keranjang.forEach(k => {
-        let row = notaTable.insertRow();
-        row.insertCell(0).innerText = k.nama;
-        row.insertCell(1).innerText = k.size;
-        row.insertCell(2).innerText = "Rp" + k.total;
-        row.insertCell(3).innerText = k.jumlah + " pcs";
-      });
-      window.print();
-      nota.style.display = "none";
-    }
-
-    function tampilkanLaporan() {
-      let filter = laporanFilter.value;
-      let now = new Date();
-      let hasil = transaksiList.filter(t => {
-        let tgl = new Date(t.tanggal);
-        if (filter === "harian") return tgl.toDateString() === now.toDateString();
-        if (filter === "mingguan") return (now - tgl) / (1000 * 60 * 60 * 24) <= 7;
-        if (filter === "bulanan") return tgl.getMonth() === now.getMonth() && tgl.getFullYear() === now.getFullYear();
-      });
-
-      if (hasil.length === 0) {
-        laporanContainer.innerHTML = "<p>Tidak ada data penjualan.</p>";
-        return;
-      }
-
-      let total = hasil.reduce((sum, x) => sum + x.total, 0);
-      laporanContainer.innerHTML = `
-        <table>
-          <tr><th>Nama Barang</th><th>Size</th><th>Jumlah</th><th>Total</th><th>Tanggal</th></tr>
-          ${hasil.map(x => `<tr><td>${x.nama}</td><td>${x.size}</td><td>${x.jumlah}</td><td>Rp${x.total}</td><td>${x.tanggal}</td></tr>`).join("")}
-        </table>
-        <p><b>Total Penjualan: Rp${total}</b></p>`;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
